--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Boutique Hotel</title>
     <link rel="stylesheet" href="/src/assets/font-awesome6/css/fontawesome.css">
     <link href="/src/assets/font-awesome6/css/brands.css" rel="stylesheet">
     <link href="/src/assets/font-awesome6/css/solid.css" rel="stylesheet">
